objects/UPC_Decomposition_Process_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>UPC_Access_Point_Case_RT__c</fullName>
        <description>Create access record type name.</description>
        <inlineHelpText>Create access record type name.</inlineHelpText>
        <label>Access Point Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BDTV_MySports_Srv_Creation_Case_RT__c</fullName>
        <label>BDTV MySports Service Creation Case RT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BDTV_Service_Creation_Case_RT__c</fullName>
        <label>BDTV Service Creation Case RT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BP_Access_Point_Case_RT__c</fullName>
        <defaultValue>&quot;BP Provisioning Taifun AccessPoint&quot;</defaultValue>
        <description>Create BP access record type name.</description>
        <inlineHelpText>Create BP access record type name.</inlineHelpText>
        <label>BP Access Point Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BP_Service_Closing_Case_RT__c</fullName>
        <label>Service Closing Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_BP_Service_Create_Case_RT__c</fullName>
        <label>BP Service Create Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Close_Mobile_Order_Case_RT__c</fullName>
        <label>Close Mobile Order Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Create_Account_Case_RT__c</fullName>
        <description>Case record type name for Create Account Case</description>
        <inlineHelpText>Case record type name for Create Account Case</inlineHelpText>
        <label>Create Account Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Mobile_Order_Case_RT__c</fullName>
        <description>A mobile order case that is generated by the orchestrator process</description>
        <label>Mobile Order Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Mobile_Order_To_ACC_Case_RT__c</fullName>
        <label>Mobile Order To ACC Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Create_Case_RT__c</fullName>
        <description>Service create case record type name</description>
        <inlineHelpText>Service create case record type name</inlineHelpText>
        <label>Service Create Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Ready_Case_RT__c</fullName>
        <description>Service Ready case record type name</description>
        <inlineHelpText>Service Ready case record type name</inlineHelpText>
        <label>Service Ready Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Completed_Case_RT__c</fullName>
        <description>A record type id of termination completed case</description>
        <inlineHelpText>A record type id of termination completed case</inlineHelpText>
        <label>Termination Completed Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Termination_Ordered_Case_RT__c</fullName>
        <description>A record type id of termination ordered case</description>
        <inlineHelpText>A record type id of termination ordered case</inlineHelpText>
        <label>Termination Ordered Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Topnet_Request_Case_RT__c</fullName>
        <description>Topnet request case record type name.</description>
        <inlineHelpText>Topnet request case record type name.</inlineHelpText>
        <label>Topnet Request Case RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Decomposition Process Settings</label>
</CustomObject>